prevent layout shift of different mode inputs

--- a/src/components/ColorPicker.css
+++ b/src/components/ColorPicker.css
@@ -19,6 +19,7 @@
   flex-direction: column;
   justify-content: center;
   gap: 2rem;
+  width: 300px;
 }
 
 .huetility-code-input-group {
@@ -45,11 +46,14 @@
   font-size: 1.25rem;
 }
 
-.huetility-string-input {
+.huetility-code-string-input {
   font-size: 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.huetility-hex-input {
+.huetility-string-input {
   width: 7rem;
   font-size: 1.25rem;
 }
